fixed overflow bug on drag

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -18,6 +18,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
   background-color: rgb(0, 0, 0);
+  overflow-x: hidden;
 }
 
 @import "./NavBar";
@@ -25,6 +26,7 @@ body {
 .slides-container {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
+  overflow-x: hidden;
   height: 100vh;
   width: 100vw;
 
