--- a/src/styles/_SlideOne.scss
+++ b/src/styles/_SlideOne.scss
@@ -26,7 +26,6 @@
       align-items: center;
 
       .tagline {
-        // display: flex;
         justify-content: center;
         font-family: $title-font;
         font-size: calc(max(4vw, 2.5rem));
@@ -65,12 +64,14 @@
     justify-content: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.3);
 
     img {
       z-index: -1;
       flex-grow: 1;
       object-fit: cover;
+      width: 100%;
+      height: 100%;
     }
   }
 }
