--- a/src/styles/_SlideThree.scss
+++ b/src/styles/_SlideThree.scss
@@ -26,10 +26,6 @@
       font-family: $title-font;
       font-size: calc(max(4vw, 2.5rem));
       width: 60%;
-
-      span {
-        // -webkit-text-stroke: 1px white;
-      }
     }
   }
 
